Fixed issues with reserve prices and selling under price

--- a/WeBid/trunk/docs/changes.txt
+++ b/WeBid/trunk/docs/changes.txt
@@ -6,5 +6,7 @@
 - Fixed the resync counters button on the admin panel so it resyncs the category counts correctly
 - Fixed listing an auction when 'can edit start time' is set to no, auctions now list with correct start time
 - Fixed a bug where some users where reciving a 500 error when bidding (Bug #45)
+- Fixed a bug where auctions that didnt meet their reserve price are not shown in the control panel
+- Fixed the option to sell under price
 
 for older changes check out http://www.webidsupport.com/wiki/Change_Log
