--- a/WeBid/trunk/docs/changes.txt
+++ b/WeBid/trunk/docs/changes.txt
@@ -1,20 +1,9 @@
-0.8.4 - 06/11/09
+0.9.0 - 02/12/09
 -----------------------------
-- Fixed the sell page so you can now actually deselect bold/highlighted/featured item options (Bug #117)
-- Fixed the auction watch page so you can add more than 1 term
-- Fixed the suspend user page so it no longer returns an error
-- Fixed the resync counters button on the admin panel so it resyncs the category counts correctly
-- Fixed listing an auction when 'can edit start time' is set to no, auctions now list with correct start time (Bug #71)
-- Fixed a bug where some users where reciving a 500 error when bidding (Bug #45)
-- Fixed a bug where auctions that didnt meet their reserve price are not shown in the control panel
-- Fixed the option to sell under price
-- Fixed (Bug #108)
-- Fixed the default language select page (Bug #122)
-- Fixed maintanance mode so any htlp you entered is displayed correctly
-- Fixed the pagination for the advanced search results
-- Fixed the contact the seller so when the sender is logged out the seller can still reply
-- Fixed the start auction now option for pending auctions ao it also updates the end date to be correct
-- Updated the view winners page so you can see winners for only the chosen auction if you want
-- Added a set as paid option on the view winners page
+- Fixed the resync counters button in admin when using a custom table prefix
+- Reorganised a few of the admin pages and merged some with similar options to make it easier to use
+- Fixed a bug in the cron script where the buyer fee is left blank
+- Cleaned up the leave feedback page so it does not show multiple entries for the same auction
+- Fixed the feedback
 
 for older changes check out http://www.webidsupport.com/wiki/Change_Log
