Bug fixes & started working improving install/update scripts NOTE: the install/update process are more than likely to be broken on this revision

--- a/WeBid/trunk/docs/changes.txt
+++ b/WeBid/trunk/docs/changes.txt
@@ -6,5 +6,8 @@
 - Removed option to enabled/ disable link to message boards
 - Removed options to edit sites background/pagewidth and page alignment via admin panel
 - Fixed a bug where payments methods wernt being set in the database
+- Fixed advanced search & search pagnation (Bug #128)
+- Fixed buying & pay pages so the buyer only has to pay shipping when seller has selected buyer pays shipping
+- Fixed feedback page so it shows corrent username
 
 for older changes check out http://www.webidsupport.com/wiki/Change_Log
