--- a/WeBid/trunk/docs/changes.txt
+++ b/WeBid/trunk/docs/changes.txt
@@ -51,5 +51,6 @@
 - Added payment gateway fields to registration page
 - Added timezone selection to registration page
 - When a payment gateway is set to required a user must now enter their details for this gateway before they can sign up
+- Edited the edit auction page so you can edit any option for the auction
 
 for older changes check out http://www.webidsupport.com/wiki/Change_Log
