quite a few bug fixes

--- a/WeBid/trunk/docs/changes.txt
+++ b/WeBid/trunk/docs/changes.txt
@@ -54,5 +54,6 @@
 - Edited the edit auction page so you can edit any option for the auction
 - Fixed the area select box when uploading a large image
 - Added input_money() to some variable where missing to avoid errors
+- Fixed how suspending accounts work now users will actually receive messages about why they cant do things when their account is suspended
 
 for older changes check out http://www.webidsupport.com/wiki/Change_Log
