--- a/WeBid/trunk/docs/changes.txt
+++ b/WeBid/trunk/docs/changes.txt
@@ -56,5 +56,7 @@
 - Added input_money() to some variable where missing to avoid errors
 - Fixed how suspending accounts work now users will actually receive messages about why they cant do things when their account is suspended
 - Replaced FCKeditor 2.6.3 with CKEditor 3.2.1
+- Added an error message for when a user tries to view an invalid auction
+- Removed 96 unused language strings
 
 for older changes check out http://www.webidsupport.com/wiki/Change_Log
