--- a/WeBid/trunk/docs/changes.txt
+++ b/WeBid/trunk/docs/changes.txt
@@ -66,5 +66,6 @@
 - Updated jQuery to version 1.4.2
 - Fixed registration fee
 - Fixed upload gallery so files with any name (with non alpha-numeric characters) will be accepted
+- Fixed the online counter so when a user logs off they don't appear online twice
 
 for older changes check out http://www.webidsupport.com/wiki/Change_Log
