--- a/WeBid/trunk/docs/changes.txt
+++ b/WeBid/trunk/docs/changes.txt
@@ -69,5 +69,6 @@
 - Fixed the online counter so when a user logs off they don't appear online twice
 - Added a check to the buy it now so it shows an error if the item hasn't started yet
 - Added the $upload_path variable to the getthumb page
+- Cleaned up the cron file split it inot two files (cron.php & functions_cron.php)
 
 for older changes check out http://www.webidsupport.com/wiki/Change_Log
