--- a/WeBid/trunk/docs/changes.txt
+++ b/WeBid/trunk/docs/changes.txt
@@ -70,5 +70,6 @@
 - Added a check to the buy it now so it shows an error if the item hasn't started yet
 - Added the $upload_path variable to the getthumb page
 - Cleaned up the cron file split it inot two files (cron.php & functions_cron.php)
+- Fixed a bug with europe style currency when listing an item the min bid would be listed wrong
 
 for older changes check out http://www.webidsupport.com/wiki/Change_Log
