--- a/WeBid/trunk/docs/changes.txt
+++ b/WeBid/trunk/docs/changes.txt
@@ -77,5 +77,7 @@
 - Added variable template includes <!-- INCLUDE {VARIABLE}.tpl -->
 - Moved the admin theme folder directly in the themes folder so you only have one admin theme for however many themes
 - Changed the auc_watch coloum to a text datatype so it can hold more than 1/2 search phrases
+- Fixed the outstanding payments pagination
+- Fixed the banner display criteria
 
 for older changes check out http://www.webidsupport.com/wiki/Change_Log
