--- a/WeBid/trunk/docs/changes.txt
+++ b/WeBid/trunk/docs/changes.txt
@@ -96,5 +96,6 @@
 - Fixed the bid counter so it now counts first bids and dutch auction bids
 - Fixed the RSS feeds to pull more than one entry
 - Upgraded the calendar script from v3.2 to v4.0.2
+- Removed the domain stats option from admin
 
 for older changes check out http://www.webidsupport.com/wiki/Change_Log
