--- a/WeBid/trunk/docs/changes.txt
+++ b/WeBid/trunk/docs/changes.txt
@@ -1,104 +1,20 @@
-1.0.0 - 02/12/09
+1.0.1 - 17/01/11
 -----------------------------
-- Reorganised a few of the admin pages and merged some with similar options to make it easier to use
-- Added a version check to the admin homepage
-- Added a page to view the error log in admin panel
-- Removed option to enabled/ disable link to message boards
-- Removed options to edit sites background/page width and page alignment via admin panel
-- Fixed a bug where payments methods weren't being set in the database
-- Fixed advanced search & search pagination (Bug #128)
-- Fixed buying & pay pages so the buyer only has to pay shipping when seller has selected buyer pays shipping
-- Fixed feedback page so it shows correct username
-- Improved the update script so it is possible to upgrade quickly though multiple version also it updates cache files so not so many things mess up when you do an update
-- Fixed the PM system for when the sender of a question is logged out (using just an email)
-- Fixed feedback
-- Fixed an sql error that occurs when newsletter is disabled
-- Fixed the % of positive feedback displayed on auction page
-- Fixed the advanced search so when searching closed auctions the buy it now option doesn't show
-- Fixed javascript in your closed auctions page
-- Fixed admin countries page so you can not edit/delete the countries
-- Fixed the registration page display fields settings
-- Added option to set number of items shown per page
-- Updated browser detection script to version 5.2.0
-- Added theme manager section in the admin panel
-- Fixed buying.php
-- Fixed the 'Reserve price missing' error when using buy it now only
-- Fixed the error where the item page displays the item as won even if reserve is not met
-- Added final value fee
-- Fixed an error in the paypal payment validation class
-- Added additional notices to the user summary page
-- Fixed a bug in the bidding where when bidding low values (< 1) it would say your bid is too low if you bided the minimum bid
-- Fixed the yourbids page so buy it now only items you have bought do not show on it
-- Fixed the item page so if the item is a buy it now only auction and you have purchased an item it says you have won
-- Fixed the cumulative email spam problem
-- Fixed a bug in the getthumbnail.php where it doesn't display png files
-- Removed the banner settings page
-- Fixed proxy bidding so when two users bid the same the first to bid wins
-- Fixed a css error in select_category.tpl
-- Added checks so at least one user group must be auto join
-- Fixed edit user error messages so they now display
-- ~Fixed advanced search when buy it now only auctions are listed so they are in the correct order when sorted by price
-- Fixed advanced search when searching auction type
-- Fixed currency converter for when entering non standard values (15,000.06 15.000,06 etc)
-- Fixed maintenance mode so the remove install dir message is not shown when its enabled.
-- Fixed a security issues with the confirm account page
-- Added translation to the auction types
-- Added option for users using shared SSL to enter the HTTPS URL
-- Fixed the payment reminder emails
-- Added missing language string ('Invalid auction type')
-- Added option for secondary category
-- Added option for auctions to have subtitles
-- Added payment gateway fields to registration page
-- Added timezone selection to registration page
-- When a payment gateway is set to required a user must now enter their details for this gateway before they can sign up
-- Edited the edit auction page so you can edit any option for the auction
-- Fixed the area select box when uploading a large image
-- Added input_money() to some variables where missing to avoid errors
-- Fixed how suspending accounts work now users will actually receive messages about why they cant do things when their account is suspended
-- Replaced FCKeditor 2.6.3 with CKEditor 3.4.1
-- Added an error message for when a user tries to view an invalid auction
-- Removed 96 unused language strings
-- Replaced all the ereg functions with preg_match as they are depreciated as of PHP 5.3
-- Updated NuSOAP from v0.6.3 to v0.9.5
-- Fixed a bug in the min bid fees javascript where it would occasionally mess up
-- Updated imageAreaSelect to version 0.9.2
-- Removed jquery dimensions plugin
-- Updated jQuery to version 1.4.3
-- Fixed registration fee
-- Fixed upload gallery so files with any name (with non alpha-numeric characters) will be accepted
-- Fixed the online counter so when a user logs off they don't appear online twice
-- Added a check to the buy it now so it shows an error if the item hasn't started yet
-- Added the $upload_path variable to the getthumb page
-- Cleaned up the cron file split it in to two files (cron.php & functions_cron.php)
-- Fixed the Page 1 of 0 error that occurs when there is no data
-- Fixed a bug with europe style currency when listing an item the min bid would be listed wrong
-- Changed all the admin delete X pages into a single confirm page
-- Added an option in admin FAQ & auction category pages so you can delete categories with content it just asks you what you wish to do with the content (move it/delete it)
-- Added variable template includes <!-- INCLUDE {VARIABLE}.tpl -->
-- Moved the admin theme folder directly in the themes folder so you only have one admin theme for however many themes
-- Changed the auc_watch column to a text datatype so it can hold more than 1/2 search phrases
-- Fixed the outstanding payments pagination
-- Fixed the banner display criteria
-- Fixed some category translation errors in item.php & select_category.php (thanks to janeks)
-- Removed the hardcoded language strings from outstading.tpl into the language file
-- Fixed the confirm links form usernames containing &, ', ", <, > etc (thanks to slsdoug)
-- Fixed some issues with SSL
-- added gz compression to the js files
-- added indexes to the categories table to speed it up
-- fixed the sell page when you create a dutch auction and go to make changes the option you cannot use no longer show (bin/reserve etc)
-- replaced the relist fee with auto-relist
-- Added an option for user to 'buy it now' more than one item at a time
-- Fixed outstanding.php to deal with quantities greater than 1
-- Improved the login so now after you login it takes you to the page you were just on instead of just taking you back to the last auction you viewed
-- Added a simple accounts feature which logs all payments made to admin
-- All alternate row style data moved to the style sheet
-- Users no longer get send two emails if a keyword is in both the title and description
-- Fixed the bid counter so it now counts first bids and dutch auction bids
-- Fixed the RSS feeds to pull more than one entry
-- Upgraded the calendar script from v3.2 to v4.0.2
-- Removed the domain stats option from admin
-- Disabled the stats from counting bots
-- Changed error reporting so by default it ignores E_NOTICE calls (http://www.php.net/manual/en/errorfunc.constants.php)
-- Added proxy bid to be displayed on the your bids page
+- Improved the version checker now if the server has allow_url_fopen disabled it will try to open the file with cURL (thanks John)
+- Fixed an error that could would effect transparent PNGs in the gallery uploader (thanks John)
+- Fixed a bug in the admin maintance page when it throws an error the values entered are now returned
+- Fixed accounts.php user data will now be stored correctly
+- Fixed FAQ category edit page where a black textbox appeared not linked to any language
+- Fixed a query in messages.inc.php
+- Fixed the admin cateogires page
+- Correctly renamed robot.txt to robots.txt
+- Fixed some remaining bugs related to the 1.000,00 currency format
+- Fixed an error in the send_email EN language file (thanks shlandau)
+- Fixed monetbookers gateway issues
+- Fixed forgot password error message
+- Fixed sell page javascript where it wouldn't remove the buy now or reserve fees after adding a value then disabling it
+- Fixed the send to a friend captcha
+- Fixed the buy it now only auctions with more than one quantity (thanks dragonflai)
+- Updated messages.inc.php (EN) and edited all the HTML to be valid
 
 for older changes check out http://www.webidsupport.com/wiki/Change_Log
